--- a/static-files-folder/style.css
+++ b/static-files-folder/style.css
@@ -29,6 +29,22 @@ button:hover{
     color: blue;
 }
 
+.icon{
+    width: 50px;
+    height: 50px;
+}
+
+.icon-tooltip{
+    visibility: hidden;
+    width: 100%;
+    background-color: darkcyan;
+    color: #fff;
+    text-align: center;
+    border-radius: 8px;
+    padding: 5px 0;
+    opacity: .7;
+}
+
 .market-buttons {
     display: flex;
     justify-content: space-between;
