Starting functionality for marketplace 'infinite scroll'

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 {% block content %}
     {% if err %}
-        <p name = "status">Error: {{err}}</p>
+        <p class = "error" name = "status">Error: {{err}}</p>
     {% endif %}
         <br>
         <table id = "inputTable">
