--- a/static-files-folder/style.css
+++ b/static-files-folder/style.css
@@ -29,6 +29,11 @@ button:hover{
     color: blue;
 }
 
+.error{
+    color: red;
+    font-weight: bold;
+}
+
 .icon{
     width: 50px;
     height: 50px;
