--- a/templates/create.html
+++ b/templates/create.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 {% if err %}
-    <p name = "status">Error: {{err}}</p>
+    <p class = "error" name = "status">Error: {{err}}</p>
 {% endif %}
    <br>
     <table id = "inputTable">
