--- a/templates/_game.html
+++ b/templates/_game.html
@@ -13,6 +13,7 @@
             <a href="login.html"><button>Login</button></a>
             <a href="game.html"><button>Play Game</button></a>
             <a href="marketplace.html"><button>Marketplace</button></a>
+            <a href="upload.html"><button>Image Upload</button></a>
             <a href="leaderboard.html"><button>Leaderboard</button></a>
         </nav>
         </div>
